# projeto-django

./: README.md  pyproject.toml
base_templates/global/: base.html
projeto/: settings.py  urls.py
recipes/: models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
recipes/templates/recipes/pages/: home.html  recipe-view.html
recipes/templates/recipes/partials/: footer.html  head.html  recipe.html  search.html
utils/recipes/: factory.py
