[project]
name = "projeto-django"
version = "0.1.0"
description = ""
authors = [
    {name = "ezerodrigues",email = "ezerodrigues@msn.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "faker (>=37.3.0,<38.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]

[tool.poetry]
packages = [{include = "projeto_django", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"
ruff = "^0.11.11"
setuptools = "^80.8.0"
wheel = "^0.45.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
